--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<a name=\"readme-top\"></a>",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server.js",
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/stino-x/check-list#readme",
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "babel-eslint": "^10.1.0",
-    "css-loader": "^6.7.3",
+    "css-loader": "^6.7.4",
     "csv-loader": "^3.0.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -31,7 +34,11 @@
     "express": "^4.18.2",
     "hint": "^7.1.8",
     "html-webpack-plugin": "^5.5.1",
-    "style-loader": "^3.3.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-localstorage-mock": "^2.4.26",
+    "mini-css-extract-plugin": "^2.7.4",
+    "style-loader": "^3.3.3",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
@@ -43,6 +50,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
+    "jsdom": "^20.0.0",
     "lodash": "^4.17.21"
   },
   "main": "server.js"
